--- a/sets/1/CMakeLists.txt
+++ b/sets/1/CMakeLists.txt
@@ -10,3 +10,7 @@ add_challenge(3
   INPUT 1b37373331363f78151b7f2b783431333d78397828372d363c78373e783a393b3736
   OUTPUT "key: X, plain text: Cooking MC's like a pound of bacon"
 )
+add_challenge(4
+  INPUT ${PROJECT_SOURCE_DIR}/challenge-data/4.txt
+  OUTPUT "key: 5, plain text: Now that the party is jumping"
+)
