--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 function(add_challenge challenge_number)
-  cmake_parse_arguments(challenge "" "" "INPUT;OUTPUT" ${ARGV})
+		  cmake_parse_arguments(challenge "" "" "ARGS;OUTPUT" ${ARGV})
   get_filename_component(set_number ${CMAKE_CURRENT_SOURCE_DIR} NAME)
   set(exec_name set_${set_number}_challenge_${challenge_number})
 
@@ -18,10 +18,9 @@ function(add_challenge challenge_number)
       RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin
   )
 
-  string (REPLACE ";" " " challenge_INPUT_STR "${challenge_INPUT}")
   add_test(NAME test_${exec_name}
     COMMAND ${PROJECT_SOURCE_DIR}/cmake/run_and_compare
-	 $<TARGET_FILE:${exec_name}> "${challenge_INPUT_STR}" "${challenge_OUTPUT}"
+	 $<TARGET_FILE:${exec_name}> -args ${challenge_ARGS} -output ${challenge_OUTPUT}
   )
 endfunction()
 
