rename operations -> xor

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -3,8 +3,8 @@ set(cryptopals_common_sources
   cryptopals/conversions.h
   cryptopals/frequency_analysis.cpp
   cryptopals/frequency_analysis.h
-  cryptopals/operations.cpp
-  cryptopals/operations.h
+  cryptopals/xor.cpp
+  cryptopals/xor.h
 )
 add_library(cryptopals_common SHARED ${cryptopals_common_sources})
 target_include_directories(cryptopals_common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
