--- a/sets/1/CMakeLists.txt
+++ b/sets/1/CMakeLists.txt
@@ -18,3 +18,7 @@ add_challenge(5
   ARGS "Burning 'em, if you ain't quick and nimble\nI go crazy when I hear a cymbal" ICE
   OUTPUT "0b3637272a2b2e63622c2e69692a23693a2a3c6324202d623d63343c2a26226324272765272\na282b2f20430a652e2c652a3124333a653e2b2027630c692b20283165286326302e27282f"
 )
+add_challenge(6_pre0
+  ARGS "this is a test" "wokka wokka!!!"
+  OUTPUT 37
+)
