challenge 2.2.pre0 - encrypt/decrypt AES ECB
Signed-off-by: Rodrigo Tobar <rtobar@icrar.org>

--- a/sets/2/CMakeLists.txt
+++ b/sets/2/CMakeLists.txt
@@ -2,3 +2,7 @@ add_challenge(1
   ARGS  "YELLOW SUBMARINE" 20
   OUTPUT_FILE ${PROJECT_SOURCE_DIR}/challenge-data/2.1-padded.txt
 )
+add_challenge(2_pre0
+  ARGS "an input string" "key has 16 bytes"
+  OUTPUT "an input string"
+)
