--- a/sets/2/CMakeLists.txt
+++ b/sets/2/CMakeLists.txt
@@ -6,3 +6,7 @@ add_challenge(2_pre0
   ARGS "an input string" "key has 16 bytes"
   OUTPUT "an input string"
 )
+add_challenge(2
+  ARGS ${PROJECT_SOURCE_DIR}/challenge-data/10.txt "YELLOW SUBMARINE"
+  OUTPUT_FILE ${PROJECT_SOURCE_DIR}/challenge-data/stayin-alive.txt
+)
